[tool.poetry]
name = "vibedb"
version = "0.1.0"
description = ""
authors = ["Sean Muirhead <smmuirhead100@berkeley.edu>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "llms"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.12.4"
anthropic = "^0.74.1"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

[tool.pylint]
max-line-length = 150

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
