[project]
name = "vibedb"
version = "0.1.0"
description = ""
authors = [{ name = "Sean Muirhead", email = "smmuirhead100@berkeley.edu" }]
requires-python = ">=3.13,<4"
readme = "README.md"
dependencies = [
    "pydantic>=2.12.4,<3",
    "anthropic>=0.74.1,<0.75",
    "dotenv>=0.9.9,<0.10",
    "sqlalchemy>=2.0.0,<3",
    "psycopg2-binary>=2.9.0,<3",
    "asyncpg>=0.30.0,<1",
    "greenlet>=3.0.0,<4",
    "google-genai>=1.56.0,<2",
    "rich>=15.0.0",
]

[tool.pylint]
max-line-length = 150

[tool.hatch.build.targets.sdist]
include = [
    "agents",
    "llms",
]

[tool.hatch.build.targets.wheel]
include = [
    "agents",
    "llms",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
